Portfolio website complete

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+source_index.html
+
+ANIMATION_GUIDE.md
+COMPONENTS_OVERVIEW.md
+FIXES_SUMMARY.md
+IMPLEMENTATION_GUIDE.md
+INTEGRATION_CHECKLIST.md
+MAINTENANCE_GUIDE.md
+PROJECT_SUMMARY.md
+QUICK_FIX_REFERENCE.md
+QUICK_REFERENCE.md
+FEATURES_IMPLEMENTATION.md
+GRID_AND_TYPEWRITER_FEATURES.md
+NEW_FEATURES_SUMMARY.md
+SOCIAL_LINKS_FEATURE.md
+QUICK_START.md
+TESTING_GUIDE.md
+VISUAL_TEST_CHECKLIST.md
